tests/tooling/fixtures/native/recovery/positive/message_send_nil_bound_identifier_post_assignment_nil_elision.objc3
// Positive fixture: explicit reassignment to nil regains nil-bound elision at send-site.
module MessageSendNilBoundIdentifierPostAssignmentNilElision;

fn main() {
  let receiver = 1;
  receiver = nil;
  let sent = [receiver ping];
  return sent + 16;
}
