tests/tooling/fixtures/native/recovery/negative/negative_message_parser_nil_bound_pre_reassignment_missing_keyword_colon.objc3
// Negative fixture: pre-reassignment nil-bound receiver message-send missing keyword colon.
// Expected diagnostic code(s): O3P113.
module NegativeMessageParserNilBoundPreReassignmentMissingKeywordColon;

fn main() {
  let receiver = nil;
  return [receiver ping 1];
}
